src/objects/Unit_Mix__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent_High__c</fullName>
        <label>Monthly Rent- High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent_SF__c</fullName>
        <formula>Monthly_Rent__c  /  Unit_SF__c</formula>
        <label>Monthly Rent/SF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent__c</fullName>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Unit Mix</relationshipLabel>
        <relationshipName>Unit_Mixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_SF_High__c</fullName>
        <label>Unit SF- High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_SF__c</fullName>
        <label>Unit SF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>1Bdr/1Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2Bdr/1Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2Bdr/2Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Bdr/1Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Bdr/2Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3Bdr/3Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Unit Mix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Unit Mix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Mixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>